<resources>
    <string name="app_name">CT Atitude</string>
    <string name="exercicios">Exercícios</string>
    <string name="nome_exercicio">Exercício:</string>
    <string name="exercicio">Exercício</string>
    <string name="selecione_exercicio">Selecione um exercício...</string>
    <string name="exemplo_exercicio">Thruster</string>
    <string name="treinos">Treinos</string>
    <string name="timer">Timer</string>
    <string name="ct_atitude">CT Atitude</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo">Novo</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome:</string>
    <string name="descricao">Descrição:</string>
    <string name="repeticoes_exercicio">Repetições:</string>
    <string name="peso_exercicio">Peso:</string>
    <string name="distancia_exercicio">Distância:</string>
    <string name="tempo_exercicios">Tempo:</string>
    <string name="nome_exercicio_hint">Digite o nome do Exercício...</string>
    <string name="descricao_exercicio_hint">Digite a descrição do exercício...</string>
    <string name="pesquisar_hint">Digite a pesquisa...</string>
    <string name="registro_salvo">Registro salvo.</string>
    <string name="registro_existente">Registro já existente.</string>
    <string name="erro_salvar">Erro ao salvar registro.</string>
    <string name="confirmacao">Confirmação</string>
    <string name="confirmacao_exclusao">Tem certeza que deseja excluir este registro?</string>
    <string name="registro_excluido">Registro excluído.</string>
    <string name="erro_exclusao_registro">Erro ao excluir registro.</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_treino_hint">Digite o nome do treino...</string>
    <string name="rounds">Rounds:</string>
    <string name="descanso">Descanso:</string>
    <string name="etapas">Etapas:</string>
    <string name="etapa">Etapa</string>
    <string name="posicao_etapa">01</string>
    <string name="duracao">Duração:</string>
    <string name="adicionar_etapa">Etapa</string>
    <string name="adicionar_exercicio">Exercício</string>
    <string name="valor_round">01</string>
    <string name="movimento">O exercício permite:</string>
    <string name="timer_inicial">00:00:00</string>
    <string name="duracao_inicial">00:00</string>
    <string name="selecione_duracao">Selecione a duração:</string>
    <string name="selecionar">Selecionar</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="qtde_repeticoes">*Repetições:</string>
    <string name="peso_exercicio_etapa">*Peso (kg):</string>
    <string name="exemplo_exercicio_etapa">Máx repetições - 50kg - 100m - 00:00</string>
    <string name="distancia_exercicio_metros">Distância (m):</string>
    <string name="maximo">*máximo = 9999</string>
    <string name="valor_min_rounds">Valor mínimo de rounds atingido.</string>
    <string name="valor_maximo_rounds">Valor máximo de rounds atingido.</string>
    <string name="tempo">Tempo:</string>
    <string name="confirmacao_inicio_timer">Deseja começar o timer?</string>
    <string name="sim">Sim</string>
    <string name="duracao_round">DURAÇÃO ROUND</string>
    <string name="duracao_total">DURAÇÃO TOTAL</string>
    <string name="round_treino">Round Treino:</string>
    <string name="round_etapa">Round Etapa:</string>
    <string name="contador_round_treino">01/01</string>
    <string name="work">WORK!</string>
    <string name="exercicio_nao_cadastrado">Exercicio {exercicio} não cadastrado.</string>
    <string name="exercicio_nao_pode_ser_excluido">Exercício não pode ser excluído, \npois faz parte de algum treino.</string>
    <string name="nome_existente">Nome já cadastrado.</string>
    <string name="nome_nao_informado">Nome não informado.</string>
    <string name="descricao_nao_informada">Descrição não informada.</string>
    <string name="minimo_etapa">Deve ser adicionada no mínimo 1 etapa.</string>
    <string name="minimo_exercicio">Deve ser adicionado no mínimo 1 exercício.</string>
    <string name="duracao_minima">Duração da etapa deve ser informada.</string>
    <string name="peso_fem_nao_informado">Peso feminino não informado.</string>
    <string name="peso_masc_nao_informado">Peso masculino não informado.</string>
</resources>