<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_TreinoLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_treinos_lista"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textNomeTreinoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/treinos"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/textDuracaoTreinoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNomeTreinoLista"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:text="@string/duracao"
            android:textSize="16sp" />
7
        <TextView
            android:id="@+id/textTimerTreinoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNomeTreinoLista"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/textDuracaoTreinoLista"
            android:singleLine="true"
            android:text="@string/timer_inicial"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/editTreinoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toStartOf="@id/deleteTreinoItem"
            android:layout_toLeftOf="@id/deleteTreinoItem"
            android:background="@drawable/selectable_button_bg"
            android:src="@drawable/ic_edit"
            android:layout_marginTop="5dp"
/>

        <ImageButton
            android:id="@+id/deleteTreinoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selectable_button_bg"
            android:src="@drawable/ic_delete"
            android:layout_marginTop="5dp"
            android:tint="@color/redblack" />/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>